[tool.poetry]
name = "srj"
version = "0.1.0"
description = "Experimental"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
cowpy = "^1.1.0"
Flask = "^1.1.4"
pysqlite3 = "^0.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
